@@ -1,127 +1,151 @@
 /*
- * Copyright (c) 2017, 2019, Oracle and/or its affiliates. All rights reserved.
- */
-/*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Copyright (c) 2007, 2018, Oracle and/or its affiliates. All rights reserved.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  */
 
 package com.sun.org.apache.bcel.internal.classfile;
 
-import java.io.DataInput;
-import java.io.DataOutputStream;
-import java.io.IOException;
+/* ====================================================================
+ * The Apache Software License, Version 1.1
+ *
+ * Copyright (c) 2001 The Apache Software Foundation.  All rights
+ * reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ *
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in
+ *    the documentation and/or other materials provided with the
+ *    distribution.
+ *
+ * 3. The end-user documentation included with the redistribution,
+ *    if any, must include the following acknowledgment:
+ *       "This product includes software developed by the
+ *        Apache Software Foundation (http://www.apache.org/)."
+ *    Alternately, this acknowledgment may appear in the software itself,
+ *    if and wherever such third-party acknowledgments normally appear.
+ *
+ * 4. The names "Apache" and "Apache Software Foundation" and
+ *    "Apache BCEL" must not be used to endorse or promote products
+ *    derived from this software without prior written permission. For
+ *    written permission, please contact apache@apache.org.
+ *
+ * 5. Products derived from this software may not be called "Apache",
+ *    "Apache BCEL", nor may "Apache" appear in their name, without
+ *    prior written permission of the Apache Software Foundation.
+ *
+ * THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESSED OR IMPLIED
+ * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+ * OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED.  IN NO EVENT SHALL THE APACHE SOFTWARE FOUNDATION OR
+ * ITS CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+ * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF
+ * USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+ * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
+ * OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+ * SUCH DAMAGE.
+ * ====================================================================
+ *
+ * This software consists of voluntary contributions made by many
+ * individuals on behalf of the Apache Software Foundation.  For more
+ * information on the Apache Software Foundation, please see
+ * <http://www.apache.org/>.
+ */
 
-import com.sun.org.apache.bcel.internal.Const;
+
+import  com.sun.org.apache.bcel.internal.Constants;
+import  java.io.*;
 
 /**
- * This class is derived from the abstract {@link Constant}
+ * This class is derived from the abstract
+ * <A HREF="com.sun.org.apache.bcel.internal.classfile.Constant.html">Constant</A> class
  * and represents a reference to an int object.
  *
- * @version $Id$
+ * @author  <A HREF="mailto:markus.dahm@berlin.de">M. Dahm</A>
  * @see     Constant
- * @LastModified: Jun 2019
  */
 public final class ConstantInteger extends Constant implements ConstantObject {
+  private int bytes;
 
-    private int bytes;
+  /**
+   * @param bytes Data
+   */
+  public ConstantInteger(int bytes)
+  {
+    super(Constants.CONSTANT_Integer);
+    this.bytes = bytes;
+  }
 
+  /**
+   * Initialize from another object.
+   */
+  public ConstantInteger(ConstantInteger c) {
+    this(c.getBytes());
+  }
 
-    /**
-     * @param bytes Data
-     */
-    public ConstantInteger(final int bytes) {
-        super(Const.CONSTANT_Integer);
-        this.bytes = bytes;
-    }
+  /**
+   * Initialize instance from file data.
+   *
+   * @param file Input stream
+   * @throws IOException
+   */
+  ConstantInteger(DataInputStream file) throws IOException
+  {
+    this(file.readInt());
+  }
 
+  /**
+   * Called by objects that are traversing the nodes of the tree implicitely
+   * defined by the contents of a Java class. I.e., the hierarchy of methods,
+   * fields, attributes, etc. spawns a tree of objects.
+   *
+   * @param v Visitor object
+   */
+  public void accept(Visitor v) {
+    v.visitConstantInteger(this);
+  }
 
-    /**
-     * Initialize from another object.
-     */
-    public ConstantInteger(final ConstantInteger c) {
-        this(c.getBytes());
-    }
+  /**
+   * Dump constant integer to file stream in binary format.
+   *
+   * @param file Output file stream
+   * @throws IOException
+   */
+  public final void dump(DataOutputStream file) throws IOException
+  {
+    file.writeByte(tag);
+    file.writeInt(bytes);
+  }
 
+  /**
+   * @return data, i.e., 4 bytes.
+   */
+  public final int getBytes() { return bytes; }
 
-    /**
-     * Initialize instance from file data.
-     *
-     * @param file Input stream
-     * @throws IOException
-     */
-    ConstantInteger(final DataInput file) throws IOException {
-        this(file.readInt());
-    }
+  /**
+   * @param bytes.
+   */
+  public final void setBytes(int bytes) {
+    this.bytes = bytes;
+  }
 
+  /**
+   * @return String representation.
+   */
+  public final String toString() {
+    return super.toString() + "(bytes = " + bytes + ")";
+  }
 
-    /**
-     * Called by objects that are traversing the nodes of the tree implicitely
-     * defined by the contents of a Java class. I.e., the hierarchy of methods,
-     * fields, attributes, etc. spawns a tree of objects.
-     *
-     * @param v Visitor object
-     */
-    @Override
-    public void accept( final Visitor v ) {
-        v.visitConstantInteger(this);
-    }
-
-
-    /**
-     * Dump constant integer to file stream in binary format.
-     *
-     * @param file Output file stream
-     * @throws IOException
-     */
-    @Override
-    public final void dump( final DataOutputStream file ) throws IOException {
-        file.writeByte(super.getTag());
-        file.writeInt(bytes);
-    }
-
-
-    /**
-     * @return data, i.e., 4 bytes.
-     */
-    public final int getBytes() {
-        return bytes;
-    }
-
-
-    /**
-     * @param bytes the raw bytes that represent this integer
-     */
-    public final void setBytes( final int bytes ) {
-        this.bytes = bytes;
-    }
-
-
-    /**
-     * @return String representation.
-     */
-    @Override
-    public final String toString() {
-        return super.toString() + "(bytes = " + bytes + ")";
-    }
-
-
-    /** @return Integer object
-     */
-    @Override
-    public Object getConstantValue( final ConstantPool cp ) {
-        return Integer.valueOf(bytes);
-    }
+  /** @return Integer object
+   */
+  public Object getConstantValue(ConstantPool cp) {
+    return new Integer(bytes);
+  }
 }
